network_policy/allow_one_pod_access.yaml
red-pod , green-pod , blue-pod pods are running, and red-pod exposed within the cluster using red-service  service. 
and network policy applied on red-pod pod. problem is now the pod red-pod is accessible from both green-pod and blue-pod pods. 
fix the issue that green-pod only can able access red-pod pod.

### Before fixing the issue 

ontrolplane $ k get networkpolicy
NAME                   POD-SELECTOR   AGE
allow-green-and-blue   run=red-pod    20m
controlplane $ k get networkpolicy allow-green-and-blue -o yaml 
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"networking.k8s.io/v1","kind":"NetworkPolicy","metadata":{"annotations":{},"name":"allow-green-and-blue","namespace":"default"},"spec":{"ingress":[{"from":[{"podSelector":{"matchLabels":{"run":"green-pod"}}},{"podSelector":{"matchLabels":{"run":"blue-pod"}}}]}],"podSelector":{"matchLabels":{"run":"red-pod"}},"policyTypes":["Ingress"]}}
  creationTimestamp: "2025-03-03T13:18:51Z"
  generation: 1
  name: allow-green-and-blue
  namespace: default
  resourceVersion: "3535"
  uid: acd2ab5b-8acb-4a72-bcb0-0714afbfedfe
spec:
  ingress:
  - from:
    - podSelector:
        matchLabels:
          run: green-pod
    - podSelector:
        matchLabels:
          run: blue-pod
  podSelector:
    matchLabels:
      run: red-pod
  policyTypes:
  - Ingress
controlplane $ k get pods --show-labels
NAME        READY   STATUS    RESTARTS   AGE   LABELS
blue-pod    1/1     Running   0          20m   run=blue-pod
green-pod   1/1     Running   0          20m   run=green-pod
red-pod     1/1     Running   0          20m   run=red-pod

#### make change to the networkpolicy 
kubectl edit networkpolicy allow-green-and-blue 
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"networking.k8s.io/v1","kind":"NetworkPolicy","metadata":{"annotations":{},"name":"allow-green-and-blue","namespace":"default"},"spec":{"ingress":[{"from":[{"podSelector":{"matchLabels":{"run":"green-pod"}}},{"podSelector":{"matchLabels":{"run":"blue-pod"}}}]}],"podSelector":{"matchLabels":{"run":"red-pod"}},"policyTypes":["Ingress"]}}
  creationTimestamp: "2025-03-03T13:18:51Z"
  generation: 1
  name: allow-green-and-blue
  namespace: default
  resourceVersion: "3535"
  uid: acd2ab5b-8acb-4a72-bcb0-0714afbfedfe
spec:
  ingress:
  - from:
    - podSelector:
        matchLabels:
          run: green-pod
  podSelector:
    matchLabels:
      run: red-pod
  policyTypes:
  - Ingress
